# University-Projects

./: .gitignore  README.md  main.py  pyproject.toml
Credit Risk Analysis/: Analysis.ipynb
Random Variables Simulation/: binomial.py  exponential.py  gamma.py  geometric.py  invesment_simulation.py  testing_simulations.ipynb
cetes_prediction/: cetes_hist.csv  cetes_pred.csv  prediction.ipynb
getStockInfo/: main.py  pyproject.toml
